--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <title>Animated Nav</title>
   </head>
   <body>
-    <nav class="active" id="nav">
+    <nav class="" id="nav">
       <ul>
         <li><a href="">Home</a></li>
         <li><a href="">Works</a></li>
